# cnpy

./: .gitignore  CMakeLists.txt  README.md  cnpy.cpp  cnpy.h  example.cpp
